# Thrift_shop

./: .gitignore  CMakeLists.txt  README.md  Server.cpp  client.cpp  main.cpp
.github/workflows/: ci.yml
Crawler/: CMakeLists.txt  CPPLINT.cfg  Dockerfile  main.cpp  readme.md
Crawler/Headers/: Clothe.h  Crawler.h  Site.h
Crawler/Sources/: Clothe.cpp  Crawler.cpp  Site.cpp
Crawler/Tests/: Mocks.h  Test.cpp
Crawler/hunter/: HunterGate.cmake
hunter/: HunterGate.cmake
include/: Client.h  MainMenu.h  Managment.h  Menu.h  MenuController.h  SearchMenu.h  Server.h
interface_bd/: CMakeLists.txt  Dockerfile  main.c  main.cpp
interface_bd/.github/workflows/: ci.yml
interface_bd/headers/: interface_BD.h  query_bd.h
interface_bd/sources/: interface_BD.cpp  query_bd.cpp
interface_bd/tests/: MockBD.cpp  MockBD.h  tests.cpp
server/: main.cpp
server/include/: Connection.h  Handler.h  Router.h  Server.h
server/src/: CMakeLists.txt  Connection.cpp  Connection.h  Handler.cpp  Handler.h  Router.h  Server.cpp
server/tests/: mock_server.cpp  mock_server.h  test.cpp
src/: Client.cpp  ClientCntrl.cpp  MainMenu.cpp  Managment.cpp  Menu.cpp  MenuController.cpp  SearchMenu.cpp  Server.cpp
tests/: Mocks.h  Tests.cpp
tgbot/: main.cpp
tgbot/include/: Client.h  ClientCntrl.h  MainMenu.h  Managment.h  Menu.h  MenuController.h  SearchMenu.h
tgbot/src/: Client.cpp  ClientCntrl.cpp  MainMenu.cpp  Managment.cpp  Menu.cpp  MenuController.cpp  SearchMenu.cpp
tgbot/tests/: Tests.cpp
